syntax = "proto3";

option java_multiple_files = true;
option java_package = "avengers.marvel";
option java_outer_classname = "MainProto";
option objc_class_prefix = "Proto";

//package api;

service KeyGeneratorApi {
    rpc fetchKey (FetchKeyRequest) returns (FetchKeyResponse) {}
}

message FetchKeyRequest {

}

message FetchKeyResponse {
    string key = 1;
}
